# seatrac-api

./: LICENSE  README.md  seatrac.py  setup.py
.github/workflows/: ci.yml
docs/: ports.md
misc/wireshark/: README.md  seatrac.lua
misc/wireshark/tls/: example-with-keys.pcapng  example.pcap  frida-sslkeylog.js  snoop.bat
ros/seatrac/: CMakeLists.txt  package.xml
ros/seatrac/msg/: OutletStatus.msg  PowerLevel.msg
ros/seatrac/src/: seatrac_node.py
seatrac/: __main__.py  client.py  protocol.py
tests/: test_protocol.py
