<?xml version="1.0"?>
<package format="2">
    <name>seatrac</name>
    <version>1.0.0</version>
    <description>Communicate with a SeaTrac surface vessel</description>
    <license>TODO</license>

    <url type="repository">https://github.com/whoigit/seatrac-api</url>

    <maintainer email="mbrosnahan@whoi.edu">Michael Brosnahan</maintainer>
    <maintainer email="rgovostes@whoi.edu">Ryan Govostes</maintainer>

    <author email="rgovostes@whoi.edu">Ryan Govostes</author>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- Message dependencies -->
    <build_depend>message_generation</build_depend>
    <build_depend>rospy</build_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rospy</exec_depend>

    <depend>std_msgs</depend>

    <!-- We use the DsHeader message type -->
    <depend>ds_core_msgs</depend>
</package>
